# tcp-server-simulator

./: .dockerignore  Dockerfile  README.md  preflight.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  run.ps1  run.sh
.github/: copilot-instructions.md
.github/agents/: gilfoyle.agent.md
.github/workflows/: ci.yml
configs/: example.json
data/: sample.csv  velocity_colon_delimited.txt  velocity_esrijson_complex.jsonl  velocity_esrijson_simple.jsonl  velocity_geojson_complex.jsonl  velocity_geojson_simple.jsonl  velocity_json_complex.jsonl  velocity_json_simple.jsonl  velocity_pipe_delimited.txt  velocity_safe.csv  velocity_safe_unquoted.csv  velocity_semicolon_delimited.txt  velocity_space_delimited.txt  velocity_tab_delimited.tsv  velocity_xml_complex.xml  velocity_xml_simple.xml
docs/: design-and-requirements.md  implementation-plan.md
docs/previous/: RAT+Output+TCP+Client+(+Enterprise+Only).doc  TCP+Client+(Enterprise+only).doc
scripts/: package_cxfreeze.py  package_pip.py  package_pyinstaller.py  preflight.py  run_tcp_sim.py
src/tcp_sim/: __init__.py  main.py  preflight.py
tests/: __init__.py  scenario_thresholds.py
tests/integration/: test_controller_receiver.py  test_controller_streaming.py  test_slow_client_churn_backpressure.py  test_tcp_client_reconnect_storm.py  test_tcp_receiver_end_to_end.py  test_tcp_server_header_order.py  test_tcp_server_reconnect_storm.py  test_udp_receiver_end_to_end.py  test_udp_reply_to_senders_cache.py
tests/soak/: test_large_file_streaming_stability.py  test_receiver_sink_rotation_backpressure.py  (+1 more)
(+45 files in other folders)
