[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcp-server-simulator"
version = "0.1.0"
description = "TCP and UDP simulator for ArcGIS Velocity testing"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ArcGIS Velocity Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
packaging = [
  "build>=1.2",
  "pyinstaller>=6.0",
  "cx_Freeze>=7.0",
]

[project.scripts]
tcp-sim = "tcp_sim.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast deterministic unit tests",
  "integration: network integration tests",
  "soak: long-running stability tests",
]
addopts = "-ra"
